--- a/index.html
+++ b/index.html
@@ -6,79 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VideoLab</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <link href="./CSS/style.css" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <!-- top navigation -->
     <div class="top">
         <div class="nav-container">
             <h1>VideoLab</h1>
             <input type="text" placeholder="Search" name="query" class="search">
-            <button class="btn">Login</button>
+            <button id="btn" onclick="Logout()" >Login</button>
         </div>
     </div>
-
     <!-- main content -->
     <div class="flex-container">
-
         <!-- left column -->
         <div class="col-l">
-
             <!-- this is a placeholder replace it with a real video -->
             <figure class="placeholder">
-                <svg style="text-anchor:middle;" width="720" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 720x400" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" dy=".3em" fill="#dee2e6" >Replace Me!</text>
-                </svg>
+                <video id="myvideo" onmouseover= "plays()" onmouseleave= "pauses()"  src="./Images/Purpleland.mp4" muted loop></video>
             </figure>
-
             <!-- video info -->
             <div class="row">
                 <div class="start">
-                    <h1>Example Video Title</h1>
+                    <div class="descr1">
+                        <h1>Example Video Title</h1>
+                        <button id="btn1" onclick="subs()" >Subscribe</button>
+                    </div>
                     <h3>1.3K Views | June, 18, 2021</h3>
                     <div class="user">
-                        <img src="assets/user.png" alt="user-circle" class="avatar-s">
+                        <img src="./Images/user.png" alt="user-circle" class="avatar-s">
                         <span class="user-name">Example User Name</span>
                     </div>
                 </div>
-                <button class="btn">Subscribe</button>
             </div>
-
         </div>
-
         <!-- right column -->
         <div class="col-r">
-
             <h3 class="sub-header">Up Next</h3>
-
             <div class="video-small">
-                <img src="assets/video-placeholder.png" alt="video placeholder" class="vid-s">
+                <img src="./Images/video-placeholder.png" alt="video placeholder" class="vid-s">
                 <span class="video-title">Not a Rick Roll</span>
             </div>
-
             <div class="video-small">
-                <img src="assets/video-placeholder.png" alt="video placeholder" class="vid-s">
+                <img src="./Images/video-placeholder.png" alt="video placeholder" class="vid-s">
                 <span class="video-title">10 Facts About ET's Cat!</span>
             </div>
-
             <div class="video-small">
-                <img src="assets/video-placeholder.png" alt="video placeholder" class="vid-s">
+                <img src="./Images/video-placeholder.png" alt="video placeholder" class="vid-s">
                 <span class="video-title">5 Cosplay Tips</span>
             </div>
-
             <div class="video-small">
-                <img src="assets/video-placeholder.png" alt="video placeholder" class="vid-s">
+                <img src="./Images/video-placeholder.png" alt="video placeholder" class="vid-s">
                 <span class="video-title">Boy Battles Dinobot in Thunderdome</span>
             </div>
-
         </div>
-
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
